# module-demo

./: AUTHORS  CMakeLists.txt  COPYRIGHT.html  COPYRIGHT.md  README.md
src/: hello.cc  hello.h  module.cppm  verify_module.cc
